# iha-api-gateway

./: Cargo.toml  Rocket.toml  askama.toml  database.sqbpro  database.sqlite  diesel.toml  package-lock.json
migrations/2024-09-08-041456_users/: up.sql
public/html/: index.html
public/html/components/: base.html  nav.html
src/: catcher.rs  lib.rs  main.rs  schema.rs
src/database/: mod.rs  sqlite.rs
src/user/: mod.rs  models.rs  repositories.rs  routes.rs
